# Ore-Classification

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
frontend/app/: page.tsx
