[project]
name = "ore-classification-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Keerthana430",email = "keerthanakrisuj@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
httpx = "^0.28.1"
[tool.poetry]
package-mode = false
